Implement database and data model
Introduce the database and initial data model for the Tomodachi Events
API. Key changes include:

- Add PostgreSQL database setup with Prisma, including schema and
initial migrations.

- Define data models for main entities such as Users, Transactions,
Invoices, Tickets, Ticket Types, Ticket Promotions, Stands, Stand Types,
Sponsors, Roles, and Events.

- Install and configure necessary dependencies for Prisma and database
connection.

- Add an `.env.example` file to facilitate environment variable
configuration.

- Modify `index.ts` to establish database connection and add basic
endpoints for user creation and retrieval.

These changes lay the foundation for data persistence and application
logic.

--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
   },
   "homepage": "https://github.com/luisjose1010/tomodachi-api#readme",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@types/express": "^5.0.1",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
+    "prisma": "^6.6.0",
     "ts-node": "^10.9.2"
   }
 }
