--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "dependencies": {
     "@prisma/client": "^6.6.0",
     "@types/express": "^5.0.1",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "typescript": "^5.8.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.1",
     "nodemon": "^3.1.9",
