Update tsconfig.json for the `src` directory
Modify `tsconfig.json` to correctly reference the `src` directory and
adjust include and exclude paths to reflect the project's source
structure.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,12 @@
     "target": "es2020",
     "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
