Configure Vercel deployment and enable CORS
Adapt the project for serverless deployment on Vercel. Key changes
include:

- Create `serverless.js` and export the app to adapt for Vercel.

- Add postinstall script for Prisma generation.

- Add CORS dependencies and integrate middleware into the Express app.

- Update `vercel.json` to use the serverless function.

- Update `tsconfig.json` to correctly reference the `src` directory.

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "/(.*)",
+      "dest": "api/serverless.js"
     }
-  ]
+  ],
+  "outputDirectory": "dist"
 }
