Enhance authentication and user management
Refactor user and authentication layers to improve security, clarity,
organization, and scalability.

- Implement JWT authentication using a dedicated utility function.

- Update user registration and login processes to return JWT tokens.

- Refactor user data handling with Zod schemas for validation.

- Add functionality to include related data (roles, transactions) when
fetching users.

- Update the `.env.example` file to include new `JWT_EXPIRATION_HOURS`
environment variable.

- Add environment variable constants (JWT_SECRET, JWT_EXPIRATION_HOURS)
in `consts.ts` file.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=
 DIRECT_DATABASE_URL= # Can be same as DATABASE_URL, null value will cause an error
 JWT_SECRET=secret
+JWT_EXPIRATION_HOURS=12
